--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -124,45 +124,28 @@
 }
 
 .ship {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   position: absolute;
-  background-color: rgba(57, 72, 103, 0.5);
   z-index: 3;
   box-sizing: border-box;
   transform-origin: top left;
   transition: all 0.1s ease;
 }
-.ship > div {
-  z-index: 6;
+.ship__cell {
+  width: 30px;
+  height: 30px;
   flex: 1;
-  box-sizing: border-box;
+  background-color: rgba(57, 72, 103, 0.5);
+  pointer-events: none;
 }
 .ship:hover {
   cursor: pointer;
 }
 
 .ship-vertical {
-  transform: rotate(90deg) translate(0, -30px);
-}
-
-.ship.s4 {
-  height: 30px;
-  width: 120px;
-}
-
-.ship.s3 {
-  height: 30px;
-  width: 90px;
-}
-
-.ship.s2 {
-  height: 30px;
-  width: 60px;
-}
-
-.ship.s1 {
-  height: 30px;
-  width: 30px;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(4, 1fr);
 }
 
 body {
