--- a/src/scss/scss-modules/_main.scss
+++ b/src/scss/scss-modules/_main.scss
@@ -146,8 +146,9 @@
 }
 
 .ship {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  // display: grid;
+  // grid-template-columns: repeat(4, 1fr);
   position: absolute;
   // margin: -2px;
   // background-color: rgb(57, 72, 103, 0.5);
@@ -160,8 +161,8 @@
   // height: fit-content;
 
   &__cell {
-    width: 30px;
-    height: 30px;
+    min-width: 30px;
+    min-height: 30px;
     // z-index: 6;
     flex: 1;
     // border: 1px solid red;
@@ -176,25 +177,6 @@
   }
 }
 
-.ship-vertical {
-  // transform: rotate(90deg) translate(0, -30px);
-  grid-template-columns: auto;
-  grid-template-rows: repeat(4, 1fr);
+.ship[data-ishorizontal='false'] {
+  flex-direction: column;
 }
-
-// .ship.s4 {
-//   height: 30px;
-//   width: 120px;
-// }
-// .ship.s3 {
-//   height: 30px;
-//   width: 90px;
-// }
-// .ship.s2 {
-//   height: 30px;
-//   width: 60px;
-// }
-// .ship.s1 {
-//   height: 30px;
-//   width: 30px;
-// }
