--- a/src/scss/scss-modules/_variables.scss
+++ b/src/scss/scss-modules/_variables.scss
@@ -3,3 +3,4 @@ $the-darkest: #394867;
 $mid-gray: #394867;
 $light-gray: #9ba4b5;
 $cell-hit-gray: rgb(190, 200, 218);
+$transparent-gray: rgb(57, 72, 103, 0.5);
