--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import './normalize.css';
+body {
+  position: relative;
+}
+
 #main {
   width: 100%;
   display: flex;
@@ -213,6 +217,63 @@
 
 .hide-element {
   display: none !important;
+}
+
+.game-over-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(57, 72, 103, 0.5);
+  z-index: 90;
+  transition: all 0.1s ease;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.game-over {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  z-index: 99;
+  background-color: #f1f6f9;
+  min-width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 16px;
+  transition: all 0.1s ease;
+  opacity: 0;
+  visibility: hidden;
+}
+.game-over__winner {
+  font-size: 26px;
+}
+.game-over__play-again {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+  outline: none;
+  background-color: #394867;
+  color: #f1f6f9;
+  padding: 6px;
+  transition: all 0.1s ease;
+  border: 1px solid #394867;
+}
+.game-over__play-again:hover {
+  background-color: #f1f6f9;
+  color: #394867;
+  cursor: pointer;
+}
+
+.game-over-visible {
+  opacity: 1;
+  visibility: visible;
 }
 
 body {
