--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -10,12 +10,12 @@ body {
   display: flex;
   align-items: center;
   flex: 1;
+  flex-wrap: wrap;
 }
 #main .main-block {
   display: flex;
   align-items: center;
   flex: 1;
-  width: 100%;
 }
 #main .main-block .board {
   display: flex;
@@ -95,11 +95,10 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  height: 100%;
   justify-content: center;
   align-items: center;
   gap: 16px;
-  padding: 32px 8px;
+  padding: 32px 0 32px 32px;
 }
 #main .main-block.player .controls .port {
   display: flex;
@@ -166,7 +165,12 @@ body {
   cursor: pointer;
 }
 #main .main-block.player .controls .disabled-button {
-  cursor: not-allowed;
+  cursor: not-allowed !important;
+  background-color: #9ba4b5;
+  border: 1px solid #9ba4b5;
+  color: #f1f6f9;
+}
+#main .main-block.player .controls .disabled-button:hover {
   background-color: #9ba4b5;
   border: 1px solid #9ba4b5;
   color: #f1f6f9;
@@ -276,12 +280,37 @@ body {
   visibility: visible;
 }
 
+@media (max-width: 885px) {
+  #app #main .main-block.player,
+  #app #main .main-block.computer {
+    justify-content: center;
+  }
+}
+@media (max-width: 550px) {
+  #app #main .main-block .controls {
+    padding: 8px;
+  }
+  #app #main .main-block .board {
+    padding: 8px;
+  }
+}
+@media (max-width: 500px) {
+  #app #main .main-block.player {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 484px) {
+  #app {
+    height: -moz-fit-content !important;
+    height: fit-content !important;
+  }
+}
 body {
   font-family: "Montserrat", sans-serif;
-  width: 100vw;
   height: 100vh;
   background-color: #f1f6f9;
   color: #394867;
+  overflow-x: hidden;
 }
 body #app {
   height: 100%;
@@ -299,4 +328,13 @@ body #app #header .logo {
 }
 body #app #footer {
   padding: 8px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+body #app #footer .github {
+  text-decoration: none;
+}
+body #app #footer .github:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=index.css.map */
