--- a/src/scss/scss-modules/_main.scss
+++ b/src/scss/scss-modules/_main.scss
@@ -28,13 +28,14 @@ body {
   display: flex;
   align-items: center;
   flex: 1;
+  flex-wrap: wrap;
 
   .main-block {
     display: flex;
     align-items: center;
     flex: 1;
     // height: 100%;
-    width: 100%;
+    // width: 100%;
 
     .board {
       display: flex;
@@ -120,11 +121,10 @@ body {
       height: 100%;
       display: flex;
       flex-direction: column;
-      height: 100%;
       justify-content: center;
       align-items: center;
       gap: 16px;
-      padding: 32px 8px;
+      padding: 32px 0 32px 32px;
 
       .port {
         display: flex;
@@ -192,11 +192,16 @@ body {
       }
 
       .disabled-button {
-        cursor: not-allowed;
+        cursor: not-allowed !important;
         background-color: $light-gray;
         border: 1px solid $light-gray;
-
         color: $bg-color;
+
+        &:hover {
+          background-color: $light-gray;
+          border: 1px solid $light-gray;
+          color: $bg-color;
+        }
       }
 
       .restart-button {
@@ -309,4 +314,45 @@ body {
 .game-over-visible {
   opacity: 1;
   visibility: visible;
+}
+
+@media (max-width: 885px) {
+  #app {
+    #main {
+      .main-block.player,
+      .main-block.computer {
+        justify-content: center;
+      }
+    }
+  }
+}
+
+@media (max-width: 550px) {
+  #app {
+    #main {
+      .main-block {
+        .controls {
+          padding: 8px;
+        }
+        .board {
+          padding: 8px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  #app {
+    #main {
+      .main-block.player {
+        flex-wrap: wrap;
+      }
+    }
+  }
+}
+@media (max-width: 484px) {
+  #app {
+    height: fit-content !important;
+  }
 }
